--- a/biovis_api.ipynb
+++ b/biovis_api.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:a8082c421ed793241b98b1457015fd476d7c614e276f1a1f4f162b8e1b9391ab"
+  "signature": "sha256:291084b0f7dd9243e7e560441916445da52e5262473744fc032d0d67f48cdf0e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -34,9 +34,7 @@
       "\n",
       "nodes_df=ng.load_nodes(cells_file_name, cell_models_file_name)\n",
       "morphologies = ng.load_morphologies(morph_dir, nodes_df)\n",
-      "\n",
-      "print \"...# morphologies: \", len(morphologies)\n",
-      "print nodes_df.shape"
+      "print \"...# unique morphologies: \", len(morphologies)\n"
      ],
      "language": "python",
      "metadata": {},
@@ -54,19 +52,18 @@
        "stream": "stdout",
        "text": [
         " 50770\n",
-        "...# morphologies: "
+        "...# unique morphologies: "
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        " 169\n",
-        "(169, 12)\n"
+        " 169\n"
        ]
       }
      ],
-     "prompt_number": 3
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -75,25 +72,13 @@
       "#Set plotting parameters and load morphologies\n",
       "\n",
       "vis.background = 'black'\n",
-      "vis.set_morphologies(morphologies)   #Set vis.dendrites_1D and vis.dendrites_1D_colours\n",
+      "vis.set_morphologies(morphologies)   #Sets vis.dendrites_1D and vis.dendrites_1D_colours\n",
       "\n"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "[[-6.55999756  0.          0.        ]\n",
-        " [ 6.55999756  0.          0.        ]]\n",
-        "[[   0.  255.    0.]\n",
-        " [   0.  255.    0.]]\n",
-        "black\n"
-       ]
-      }
-     ],
-     "prompt_number": 4
+     "outputs": [],
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -138,7 +123,7 @@
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -174,7 +159,7 @@
        ]
       }
      ],
-     "prompt_number": 6
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
