--- a/biovis_api.ipynb
+++ b/biovis_api.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:291084b0f7dd9243e7e560441916445da52e5262473744fc032d0d67f48cdf0e"
+  "signature": "sha256:fc4edb874d540acec4b22e96cbc0071f1b1685ca939a7652f1bb5fd84594eeab"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -12,7 +12,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "import biovis as vis# super-duper Cat's package \n",
+      "from biovis import Biovis # super-duper Cat's package \n",
       "import pandas as pd\n",
       "import json\n",
       "import netgraph as ng # Sergey's package for network model io"
@@ -32,7 +32,7 @@
       "cell_models_file_name = \"simulations/nodes/cm_perisomatic.csv\"\n",
       "morph_dir = \"simulations/biophysical/morph_segs\"\n",
       "\n",
-      "nodes_df=ng.load_nodes(cells_file_name, cell_models_file_name)\n",
+      "nodes_df, cells_prop_df=ng.load_nodes(cells_file_name, cell_models_file_name)\n",
       "morphologies = ng.load_morphologies(morph_dir, nodes_df)\n",
       "print \"...# unique morphologies: \", len(morphologies)\n"
      ],
@@ -44,7 +44,7 @@
        "stream": "stdout",
        "text": [
         "...importing nodes...\n",
-        "...total cells: "
+        "...total # cells simulated: "
        ]
       },
       {
@@ -69,11 +69,25 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "#Set plotting parameters and load morphologies\n",
+      "#Initialize biovis and set plotting parameters \n",
+      "vis = Biovis()             #Instantiates the visualization object\n",
+      "vis.nodes_df = nodes_df\n",
+      "vis.morphologies = morphologies\n",
+      "vis.background = 'black'  # create a blank window for visualization\n",
       "\n",
-      "vis.background = 'black'\n",
-      "vis.set_morphologies(morphologies)   #Sets vis.dendrites_1D and vis.dendrites_1D_colours\n",
-      "\n"
+      "\n",
+      "\n",
+      "#vis.set_box(edge_coords=) # xyz volume block to place in the window\n",
+      "#vis.set_camera_view(location=my_location) # point of view, or may be just an orientation\n",
+      "#vis.set_box_edge_tick_labels(position='southwest',linewidth=2) # add xyz axes to be able to orient in space\n",
+      "#vis.set_axes(position='southwest',linewidth=2) # add xyz axes to be able to orient in space\n",
+      "#vis.set_box_axes_labels(position='southwest',linewidth=2) # add xyz axes to be able to orient in space\n",
+      "#vis.layers(depths=layer_depths,colors=layer_colors)\n",
+      "#vis.load_nodes(nodes_df,morphologies) # pass nodes to the visualiz\n",
+      "#vis.somata3d(gids_sel1,color='magenta')\n",
+      "#vis.morphs3d(gids_selg2,colors = pop_colors) # a different data frame may be passed here\n",
+      "#vis.set_title('mouse V1 column')\n",
+      "#vis.electrode(positions=linear_electrode_positions) # linear_electrode_positions are specified somewhere above\n"
      ],
      "language": "python",
      "metadata": {},
@@ -84,18 +98,14 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "# select cells to display. \n",
-      "\n",
+      "#***************MAKE QUERY ******************\n",
       "#selection = \"cre_line=='Rorb' & location=='VisL4' & (z_soma**2+x_soma**2)<200**2\"\n",
       "#selection = \"location=='VisL4' & (z_soma**2+x_soma**2)<300**2\"\n",
       "#selection = \"ei=='excitatory'\"\n",
       "selection = \"model_id==314642645\"\n",
       "\n",
-      "cells_select_df = nodes_df.query(selection)\n",
-      "ncells_select = len(cells_select_df.index)\n",
-      "print \"number of cells satisfying selection:\", ncells_select\n",
-      "\n",
-      "print cells_select_df\n"
+      "cells_select_df = cells_prop_df.query(selection)\n",
+      "print \"number of cells satisfying selection:\", len(cells_select_df.index)\n"
      ],
      "language": "python",
      "metadata": {},
@@ -104,26 +114,91 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "number of cells satisfying selection: 1\n",
-        "                   level_of_detail cre_line location ei_location          ei  \\\n",
-        "model_id                                                                       \n",
-        "314642645  biophysical_perisomatic     Rorb    VisL4      eVisL4  excitatory   \n",
-        "\n",
-        "          reporter_status       ymax       ymin  \\\n",
-        "model_id                                          \n",
-        "314642645        positive  414.94199 -94.692388   \n",
-        "\n",
-        "                                                  morphology  \\\n",
-        "model_id                                                       \n",
-        "314642645  Rorb-IRES2-Cre-D_Ai14-168052.03.02.01_49177014...   \n",
-        "\n",
-        "            electrophysiology  rotation_angle_zaxis  pia_distance  \n",
-        "model_id                                                           \n",
-        "314642645  314642645_fit.json             -4.082582    372.685943  \n"
+        "number of cells satisfying selection: 522\n"
        ]
       }
      ],
      "prompt_number": 4
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "#vis.load_selection_dendrites(cells_select_df)    #Load selected cell dendrites\n",
+      "vis.load_selection_somas(cells_select_df[::10])"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 5
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "#vis.load_selection_somas(cells_select_df)      #Load selected cell somas as spheres\n",
+      "\n",
+      "\n",
+      "\n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 6
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "\n",
+      "vis.initialize()\n",
+      "vis.show()\n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "vis.load_nodes(nodes_df,morphologies) # pass nodes to the visualiz \n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "ename": "AttributeError",
+       "evalue": "'Biovis' object has no attribute 'load_nodes'",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+        "\u001b[0;32m<ipython-input-11-e7279ff1cad0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mvis\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_nodes\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnodes_df\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmorphologies\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# pass nodes to the visualiz\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[0;31mAttributeError\u001b[0m: 'Biovis' object has no attribute 'load_nodes'"
+       ]
+      }
+     ],
+     "prompt_number": 11
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "vis.somata3d(gids_sel1,color='magenta')\n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "vis.morphs3d(gids_selg2,colors = pop_colors) # a different data frame may be passed here"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -134,66 +209,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "black\n"
-       ]
-      },
-      {
-       "ename": "SystemExit",
-       "evalue": "0",
-       "output_type": "pyerr",
-       "traceback": [
-        "An exception has occurred, use %tb to see the full traceback.\n",
-        "\u001b[0;31mSystemExit\u001b[0m\u001b[0;31m:\u001b[0m 0\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "To exit: use 'exit', 'quit', or Ctrl-D.\n"
-       ]
-      }
-     ],
-     "prompt_number": 5
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "\n",
-      "\n",
-      "quit()\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 7
+     "outputs": []
     },
     {
      "cell_type": "code",
