morphologies oriented upright; added layers; added box; fixed aspect ratio

--- a/biovis_api.ipynb
+++ b/biovis_api.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:fc4edb874d540acec4b22e96cbc0071f1b1685ca939a7652f1bb5fd84594eeab"
+  "signature": "sha256:513e712dcaa7b332b84974d1115d5b44bda58d951d2270b58168f4d94335b123"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -75,14 +75,22 @@
       "vis.morphologies = morphologies\n",
       "vis.background = 'black'  # create a blank window for visualization\n",
       "\n",
+      "#Create layer slices\n",
+      "layer_depths = [100,310,420,650,850]  #NB: These will be negative in the display; NB: added top and bottom also, not necessary\n",
+      "layer_colors = [(0, 230, 0)] #green\n",
+      "vis.setlayers(layer_depths, layer_colors)\n",
+      "\n",
+      "#Create box on outside of column\n",
+      "outerbox=[[500,0,500], [500,0,-500], [-500,0,-500], [-500,0,500], [500,1000,500], [500,1000,-500], [-500,1000,-500], [-500,1000,500]]\n",
+      "outerbox_colour = [(255,255,255)]\n",
+      "vis.setbox(outerbox, outerbox_colour) # xyz volume block to place in the window\n",
+      "#Optional can also make an inner box that is just the size of the simulation \n",
       "\n",
       "\n",
-      "#vis.set_box(edge_coords=) # xyz volume block to place in the window\n",
       "#vis.set_camera_view(location=my_location) # point of view, or may be just an orientation\n",
       "#vis.set_box_edge_tick_labels(position='southwest',linewidth=2) # add xyz axes to be able to orient in space\n",
       "#vis.set_axes(position='southwest',linewidth=2) # add xyz axes to be able to orient in space\n",
       "#vis.set_box_axes_labels(position='southwest',linewidth=2) # add xyz axes to be able to orient in space\n",
-      "#vis.layers(depths=layer_depths,colors=layer_colors)\n",
       "#vis.load_nodes(nodes_df,morphologies) # pass nodes to the visualiz\n",
       "#vis.somata3d(gids_sel1,color='magenta')\n",
       "#vis.morphs3d(gids_selg2,colors = pop_colors) # a different data frame may be passed here\n",
@@ -92,7 +100,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
@@ -118,33 +126,31 @@
        ]
       }
      ],
-     "prompt_number": 4
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "#vis.load_selection_dendrites(cells_select_df)    #Load selected cell dendrites\n",
-      "vis.load_selection_somas(cells_select_df[::10])"
+      "vis.load_selection_dendrites(cells_select_df[:10])    #Load selected cell dendrites\n",
+      "vis.load_selection_somas(cells_select_df[:10])"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 5
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "#vis.load_selection_somas(cells_select_df)      #Load selected cell somas as spheres\n",
-      "\n",
-      "\n",
-      "\n"
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "... done loading cells...\n",
+        "...generating cell colours...\n",
+        "...converting lists to arrays ...\n",
+        "(2420, 3)\n",
+        "... done all ...\n"
+       ]
+      }
      ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 6
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
@@ -156,7 +162,25 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "black\n",
+        "1000 678\n",
+        "1000"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " 706\n",
+        "1609"
+       ]
+      }
+     ]
     },
     {
      "cell_type": "code",
@@ -166,19 +190,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "ename": "AttributeError",
-       "evalue": "'Biovis' object has no attribute 'load_nodes'",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-        "\u001b[0;32m<ipython-input-11-e7279ff1cad0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mvis\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_nodes\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnodes_df\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmorphologies\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# pass nodes to the visualiz\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-        "\u001b[0;31mAttributeError\u001b[0m: 'Biovis' object has no attribute 'load_nodes'"
-       ]
-      }
-     ],
-     "prompt_number": 11
+     "outputs": []
     },
     {
      "cell_type": "code",
