--- a/biovis_api.ipynb
+++ b/biovis_api.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:513e712dcaa7b332b84974d1115d5b44bda58d951d2270b58168f4d94335b123"
+  "signature": "sha256:e48641ee2ccfe1e682823f2b14587db17bd4c9017c41b7c99aec7ff39aa0b218"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -80,11 +80,11 @@
       "layer_colors = [(0, 230, 0)] #green\n",
       "vis.setlayers(layer_depths, layer_colors)\n",
       "\n",
-      "#Create box on outside of column\n",
+      "#Create box on outside of column; standard size is 1mm^3 and should not be changed\n",
       "outerbox=[[500,0,500], [500,0,-500], [-500,0,-500], [-500,0,500], [500,1000,500], [500,1000,-500], [-500,1000,-500], [-500,1000,500]]\n",
       "outerbox_colour = [(255,255,255)]\n",
       "vis.setbox(outerbox, outerbox_colour) # xyz volume block to place in the window\n",
-      "#Optional can also make an inner box that is just the size of the simulation \n",
+      "#Optional can also make an inner box that is just the size of the existing network; e.g. read size confignetwork.py file\n",
       "\n",
       "\n",
       "#vis.set_camera_view(location=my_location) # point of view, or may be just an orientation\n",
@@ -100,7 +100,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 7
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -109,8 +109,8 @@
       "#***************MAKE QUERY ******************\n",
       "#selection = \"cre_line=='Rorb' & location=='VisL4' & (z_soma**2+x_soma**2)<200**2\"\n",
       "#selection = \"location=='VisL4' & (z_soma**2+x_soma**2)<300**2\"\n",
-      "#selection = \"ei=='excitatory'\"\n",
-      "selection = \"model_id==314642645\"\n",
+      "selection = \"ei=='excitatory'\"\n",
+      "#selection = \"model_id==314642645\"\n",
       "\n",
       "cells_select_df = cells_prop_df.query(selection)\n",
       "print \"number of cells satisfying selection:\", len(cells_select_df.index)\n"
@@ -122,18 +122,18 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "number of cells satisfying selection: 522\n"
+        "number of cells satisfying selection: 43152\n"
        ]
       }
      ],
-     "prompt_number": 8
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "vis.load_selection_dendrites(cells_select_df[:10])    #Load selected cell dendrites\n",
-      "vis.load_selection_somas(cells_select_df[:10])"
+      "vis.load_selection_dendrites(cells_select_df[:1000])    #Load selected cell dendrites\n",
+      "vis.load_selection_somas(cells_select_df[:1000])"
      ],
      "language": "python",
      "metadata": {},
@@ -142,15 +142,38 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "... done loading cells...\n",
+        "... processing cell:  0\n",
+        "... done loading cells..."
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
         "...generating cell colours...\n",
-        "...converting lists to arrays ...\n",
-        "(2420, 3)\n",
-        "... done all ...\n"
+        "...converting lists to arrays ..."
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "(541516, 3)"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "... done all ...\n",
+        "... processing cell:  0\n"
        ]
       }
      ],
-     "prompt_number": 9
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -179,14 +202,40 @@
         " 706\n",
         "1609"
        ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " 1004\n"
+       ]
+      },
+      {
+       "ename": "SystemExit",
+       "evalue": "0",
+       "output_type": "pyerr",
+       "traceback": [
+        "An exception has occurred, use %tb to see the full traceback.\n",
+        "\u001b[0;31mSystemExit\u001b[0m\u001b[0;31m:\u001b[0m 0\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "To exit: use 'exit', 'quit', or Ctrl-D.\n"
+       ]
       }
-     ]
+     ],
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "vis.load_nodes(nodes_df,morphologies) # pass nodes to the visualiz \n"
+      "layer_depths = [100,310,420,650,850]  #NB: These will be negative in the display; NB: added top and bottom also, not necessary\n",
+      "layer_colors = [(0, 230, 0)] #green\n",
+      "vis.setlayers(layer_depths, layer_colors)\n"
      ],
      "language": "python",
      "metadata": {},
@@ -196,7 +245,8 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "vis.somata3d(gids_sel1,color='magenta')\n"
+      "vis.initialize()\n",
+      "vis.show()"
      ],
      "language": "python",
      "metadata": {},
