--- a/biovis_api.ipynb
+++ b/biovis_api.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:e48641ee2ccfe1e682823f2b14587db17bd4c9017c41b7c99aec7ff39aa0b218"
+  "signature": "sha256:d1335446220b890a10fa1bbe7c9ae3cd274973541303774c98ec7fa61c67270c"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -15,7 +15,8 @@
       "from biovis import Biovis # super-duper Cat's package \n",
       "import pandas as pd\n",
       "import json\n",
-      "import netgraph as ng # Sergey's package for network model io"
+      "import netgraph as ng # Sergey's package for network model io\n",
+      "\n"
      ],
      "language": "python",
      "metadata": {},
@@ -34,7 +35,10 @@
       "\n",
       "nodes_df, cells_prop_df=ng.load_nodes(cells_file_name, cell_models_file_name)\n",
       "morphologies = ng.load_morphologies(morph_dir, nodes_df)\n",
-      "print \"...# unique morphologies: \", len(morphologies)\n"
+      "print \"...# unique morphologies: \", len(morphologies)\n",
+      "\n",
+      "\n",
+      "    "
      ],
      "language": "python",
      "metadata": {},
@@ -69,33 +73,251 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "#Initialize biovis and set plotting parameters \n",
-      "vis = Biovis()             #Instantiates the visualization object\n",
-      "vis.nodes_df = nodes_df\n",
-      "vis.morphologies = morphologies\n",
-      "vis.background = 'black'  # create a blank window for visualization\n",
-      "\n",
-      "#Create layer slices\n",
-      "layer_depths = [100,310,420,650,850]  #NB: These will be negative in the display; NB: added top and bottom also, not necessary\n",
-      "layer_colors = [(0, 230, 0)] #green\n",
-      "vis.setlayers(layer_depths, layer_colors)\n",
-      "\n",
+      "#Initialize biovis and show blank canvas\n",
+      "vis = Biovis()             #Instantiates the visualization object; creates main window for visualization\n",
+      "vis.background = 'black'  \n",
+      "vis.show()       #Optional: show blank canvas (not necessary to initiate)\n",
+      "\n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "... initializing ...\n",
+        "... showing ..."
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n"
+       ]
+      }
+     ],
+     "prompt_number": 3
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
       "#Create box on outside of column; standard size is 1mm^3 and should not be changed\n",
       "outerbox=[[500,0,500], [500,0,-500], [-500,0,-500], [-500,0,500], [500,1000,500], [500,1000,-500], [-500,1000,-500], [-500,1000,500]]\n",
       "outerbox_colour = [(255,255,255)]\n",
       "vis.setbox(outerbox, outerbox_colour) # xyz volume block to place in the window\n",
       "#Optional can also make an inner box that is just the size of the existing network; e.g. read size confignetwork.py file\n",
       "\n",
+      "vis.restart()  #Todo: develop vis.update() for dynamic updating\n",
+      "\n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "...restarting ...\n"
+       ]
+      }
+     ],
+     "prompt_number": 4
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "#Create layer slices\n",
+      "layer_depths = [100,310,420,650,850]  #NB: These will be negative in the display; NB: added top and bottom also, not necessary\n",
+      "layer_colors = [(0, 0, 127)] #blue\n",
+      "vis.setlayers(layer_depths, layer_colors)\n",
+      "\n",
+      "vis.restart()\n",
+      "\n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "...restarting ...\n"
+       ]
+      }
+     ],
+     "prompt_number": 5
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "#Make query\n",
+      "#selection = \"cre_line=='Rorb' & location=='VisL4' & (z_soma**2+x_soma**2)<200**2\"\n",
+      "#selection = \"location=='VisL4' & (z_soma**2+x_soma**2)<300**2\"\n",
+      "selection = \"ei=='excitatory'\"\n",
+      "#selection = \"model_id==314642645\"\n",
+      "\n",
+      "cells_select_df = cells_prop_df.query(selection)\n",
+      "print \"number of cells satisfying selection:\", len(cells_select_df.index)\n",
+      "\n",
+      "\n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "number of cells satisfying selection: 43152\n"
+       ]
+      }
+     ],
+     "prompt_number": 6
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "#Load query into widget\n",
+      "vis.nodes_df = nodes_df\n",
+      "vis.morphologies = morphologies\n",
+      "\n",
+      "#vis.load_selected_dendrites(cells_select_df)    #Load selected dendrites\n",
+      "vis.load_selected_somas(cells_select_df[:10000])        #Load selected somas as spheres (80 surfaces)\n",
+      "\n",
+      "vis.restart()  \n",
+      "\n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "... processing cell:  0\n",
+        "... processing cell: "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " 1000\n",
+        "... processing cell: "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " 2000\n",
+        "... processing cell: "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " 3000\n",
+        "... processing cell: "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " 4000\n",
+        "... processing cell: "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " 5000\n",
+        "... processing cell: "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " 6000\n",
+        "... processing cell: "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " 7000\n",
+        "... processing cell: "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " 8000\n",
+        "... processing cell: "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " 9000\n",
+        "...restarting ..."
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n"
+       ]
+      }
+     ],
+     "prompt_number": 7
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "\n",
+      "\n",
       "\n",
       "#vis.set_camera_view(location=my_location) # point of view, or may be just an orientation\n",
       "#vis.set_box_edge_tick_labels(position='southwest',linewidth=2) # add xyz axes to be able to orient in space\n",
       "#vis.set_axes(position='southwest',linewidth=2) # add xyz axes to be able to orient in space\n",
       "#vis.set_box_axes_labels(position='southwest',linewidth=2) # add xyz axes to be able to orient in space\n",
-      "#vis.load_nodes(nodes_df,morphologies) # pass nodes to the visualiz\n",
-      "#vis.somata3d(gids_sel1,color='magenta')\n",
       "#vis.morphs3d(gids_selg2,colors = pop_colors) # a different data frame may be passed here\n",
       "#vis.set_title('mouse V1 column')\n",
-      "#vis.electrode(positions=linear_electrode_positions) # linear_electrode_positions are specified somewhere above\n"
+      "#vis.electrode(positions=linear_electrode_positions) # linear_electrode_positions are specified somewhere above\n",
+      "\n",
+      "\n"
      ],
      "language": "python",
      "metadata": {},
@@ -106,14 +328,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "#***************MAKE QUERY ******************\n",
-      "#selection = \"cre_line=='Rorb' & location=='VisL4' & (z_soma**2+x_soma**2)<200**2\"\n",
-      "#selection = \"location=='VisL4' & (z_soma**2+x_soma**2)<300**2\"\n",
-      "selection = \"ei=='excitatory'\"\n",
-      "#selection = \"model_id==314642645\"\n",
-      "\n",
-      "cells_select_df = cells_prop_df.query(selection)\n",
-      "print \"number of cells satisfying selection:\", len(cells_select_df.index)\n"
+      "\n"
      ],
      "language": "python",
      "metadata": {},
@@ -132,8 +347,8 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "vis.load_selection_dendrites(cells_select_df[:1000])    #Load selected cell dendrites\n",
-      "vis.load_selection_somas(cells_select_df[:1000])"
+      "\n",
+      "\n"
      ],
      "language": "python",
      "metadata": {},
@@ -152,15 +367,8 @@
        "text": [
         "\n",
         "...generating cell colours...\n",
-        "...converting lists to arrays ..."
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "(541516, 3)"
+        "...converting lists to arrays ...\n",
+        "(54128, 3)"
        ]
       },
       {
@@ -178,11 +386,7 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [
-      "\n",
-      "vis.initialize()\n",
-      "vis.show()\n"
-     ],
+     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": [
@@ -233,9 +437,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "layer_depths = [100,310,420,650,850]  #NB: These will be negative in the display; NB: added top and bottom also, not necessary\n",
-      "layer_colors = [(0, 230, 0)] #green\n",
-      "vis.setlayers(layer_depths, layer_colors)\n"
+      "\n"
      ],
      "language": "python",
      "metadata": {},
