notebook call update

--- a/biovis_api.ipynb
+++ b/biovis_api.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:d1335446220b890a10fa1bbe7c9ae3cd274973541303774c98ec7fa61c67270c"
+  "signature": "sha256:dbda3046aa5f86e30c30b95ddf954240d2edab5a0c7cb79d6eef6d7b510dd2ec"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -187,8 +187,8 @@
       "vis.nodes_df = nodes_df\n",
       "vis.morphologies = morphologies\n",
       "\n",
-      "#vis.load_selected_dendrites(cells_select_df)    #Load selected dendrites\n",
-      "vis.load_selected_somas(cells_select_df[:10000])        #Load selected somas as spheres (80 surfaces)\n",
+      "vis.load_selected_dendrites(cells_select_df[:1000])    #Load selected dendrites\n",
+      "vis.load_selected_somas(cells_select_df[:1000])        #Load selected somas as spheres (80 surfaces)\n",
       "\n",
       "vis.restart()  \n",
       "\n"
@@ -273,18 +273,309 @@
        "stream": "stdout",
        "text": [
         " 9000\n",
-        "...restarting ..."
+        "... processing cell: "
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "\n"
+        " 10000\n",
+        "... processing cell: "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " 11000\n",
+        "... processing cell: "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " 12000\n",
+        "... processing cell: "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " 13000\n",
+        "... processing cell: "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " 14000\n",
+        "... processing cell: "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " 15000\n",
+        "... processing cell: "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " 16000\n",
+        "... processing cell: "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " 17000\n",
+        "... processing cell: "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " 18000\n",
+        "... processing cell: "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " 19000\n",
+        "... processing cell: "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " 20000\n",
+        "... processing cell: "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " 21000\n",
+        "... processing cell: "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " 28000\n",
+        "... processing cell: "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " 29000\n",
+        "... processing cell: "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " 30000\n",
+        "... processing cell: "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " 31000\n",
+        "... processing cell: "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " 32000\n",
+        "... processing cell: "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " 33000\n",
+        "... processing cell: "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " 34000\n",
+        "... processing cell: "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " 35000\n",
+        "... processing cell: "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " 36000\n",
+        "... processing cell: "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " 37000\n",
+        "... processing cell: "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " 38000\n",
+        "... processing cell: "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " 39000\n",
+        "... processing cell: "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " 40000\n",
+        "... processing cell: "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " 41000\n",
+        "... processing cell: "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " 42000\n",
+        "... processing cell: "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " 43000\n",
+        "... processing cell: "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " 44000\n",
+        "... processing cell: "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " 45000\n",
+        "... processing cell: "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " 46000\n",
+        "... processing cell: "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " 47000\n",
+        "... processing cell: "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " 48000\n",
+        "... processing cell: "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " 50000\n",
+        "... done loading cells..."
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "...generating cell colours...\n",
+        "...converting lists to arrays ..."
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "(15930396, 3)"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "... done all ...\n",
+        "...restarting ...\n"
        ]
       }
      ],
-     "prompt_number": 7
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
