--- a/plot_net.ipynb
+++ b/plot_net.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:95ca9e3cf172da4d2829f3120c4d74799b7b127f1df95cadf97526907b187cb4"
+  "signature": "sha256:41b721c1e17bc2edd59bc4bdcddb98151cc77bfab7d04de43d3d55d3a2715381"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -121,7 +121,7 @@
      "collapsed": false,
      "input": [
       "#Set figure background\n",
-      "fig.set_bgcolor('white')    #Set figure background\n",
+      "fig.set_bgcolor('black')    #Set figure background\n",
       "\n",
       "\n",
       "\n"
@@ -133,11 +133,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "...setting gbcolor:  white\n"
+        "...setting gbcolor:  black\n"
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 11
     },
     {
      "cell_type": "code",
@@ -146,7 +146,7 @@
       "#Create layer slices\n",
       "layer_depths = [100,310,420,650,850]  #NB: values will display as negative, i.e. from top of cortex\n",
       "layer_colors = [(0, 0, 127)] #blue\n",
-      "layer_alpha = 50\n",
+      "layer_alpha = 150\n",
       "fig.set_layers(layer_depths, layer_colors, layer_alpha)\n",
       "\n",
       "#to remove use: fig.set_layers([],[]) \n",
@@ -160,13 +160,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "...setting layers...\n",
-        "...self.layers_colours shape:  (30, 4)\n",
-        "[   0.    0.  127.   50.]\n"
+        "...setting layers...\n"
        ]
       }
      ],
-     "prompt_number": 10
+     "prompt_number": 16
     },
     {
      "cell_type": "code",
@@ -174,7 +172,7 @@
      "input": [
       "#Create frame on outside of column; standard size is 1mm^3 and should not be changed\n",
       "frame=[[500,0,500], [500,0,-500], [-500,0,-500], [-500,0,500], [500,1000,500], [500,1000,-500], [-500,1000,-500], [-500,1000,500]]\n",
-      "frame_colour = [(0,0,0)]\n",
+      "frame_colour = [(255,255,255)]\n",
       "fig.set_frame(frame, frame_colour) # xyz volume block to place in the window\n",
       "\n",
       "#to remove use: fig.set_frame([],[]) \n",
@@ -192,7 +190,7 @@
        ]
       }
      ],
-     "prompt_number": 7
+     "prompt_number": 13
     },
     {
      "cell_type": "code",
@@ -249,7 +247,7 @@
        ]
       }
      ],
-     "prompt_number": 8
+     "prompt_number": 14
     },
     {
      "cell_type": "code",
@@ -268,7 +266,7 @@
        ]
       }
      ],
-     "prompt_number": 11
+     "prompt_number": 17
     },
     {
      "cell_type": "code",
