--- a/plot_net.ipynb
+++ b/plot_net.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:41b721c1e17bc2edd59bc4bdcddb98151cc77bfab7d04de43d3d55d3a2715381"
+  "signature": "sha256:b6650526f597bc75149b511e4b0e9e92a5bc86c47804fb0a2677852e84ff2f9a"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -137,7 +137,7 @@
        ]
       }
      ],
-     "prompt_number": 11
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -164,7 +164,7 @@
        ]
       }
      ],
-     "prompt_number": 16
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -190,7 +190,7 @@
        ]
       }
      ],
-     "prompt_number": 13
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
@@ -198,8 +198,8 @@
      "input": [
       "#plot selected nodes and somas from query\n",
       "\n",
-      "fig.plot_morph(cells_select_df, morphologies)    #Pass query into plotting routine along with raw morphologies\n",
-      "fig.plot_somas(cells_select_df, morphologies)    #Pass query into plotting routine along with raw morphologies\n",
+      "fig.plot_morph(cells_select_df[:10], morphologies)    #Pass query into plotting routine along with raw morphologies\n",
+      "fig.plot_somas(cells_select_df[:10], morphologies)    #Pass query into plotting routine along with raw morphologies\n",
       "\n",
       "\n"
      ],
@@ -210,44 +210,14 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "... processing cell:  28000\n",
-        "... done loading cells..."
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
+        "... done loading cells...\n",
         "...generating cell colours...\n",
-        "...converting lists to arrays ..."
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "... done all ..."
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "... processing cell: "
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " 28000\n"
+        "...converting lists to arrays ...\n",
+        "... done all ...\n"
        ]
       }
      ],
-     "prompt_number": 14
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
@@ -266,7 +236,7 @@
        ]
       }
      ],
-     "prompt_number": 17
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
@@ -276,8 +246,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 10
+     "outputs": []
     },
     {
      "cell_type": "code",
