--- a/plot_net.ipynb
+++ b/plot_net.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:b6650526f597bc75149b511e4b0e9e92a5bc86c47804fb0a2677852e84ff2f9a"
+  "signature": "sha256:5560e57c47eb732fd2c7e713429ac8da0ea807b2b78e6c14068b4c709daa7e96"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -53,6 +53,7 @@
        "stream": "stdout",
        "text": [
         " 50770\n",
+        "...importing morphologies...\n",
         "...# unique morphologies: "
        ]
       },
