restructured files, introduced colormaps

--- a/examples/plot_net.ipynb
+++ b/examples/plot_net.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:1ce71131b9d46e7c47a7b98b582cd257b2c578b61770e9d3b3f59537b922c8d4"
+  "signature": "sha256:70d998e8b98a302b6c2672ece7c69fdf8e6225d96e65ceb66fc3431c086ef78d"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -23,7 +23,18 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
+     "outputs": [
+      {
+       "ename": "ImportError",
+       "evalue": "No module named plotbio",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+        "\u001b[1;32m<ipython-input-1-370ae873b62d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mbiovis\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplotbio\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mplb\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mbiovis\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnetgraph\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mng\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mbiovis\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcmaps\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mcm\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mget_ipython\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmagic\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mu'load_ext autoreload'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+        "\u001b[1;31mImportError\u001b[0m: No module named plotbio"
+       ]
+      }
+     ],
      "prompt_number": 1
     },
     {
@@ -200,7 +211,7 @@
        ]
       }
      ],
-     "prompt_number": 15
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
@@ -220,12 +231,11 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "# may chose specific colors in the list below, the full list of colors is cm.color_lib\n",
-      "color_list = ['azure', 'brown', 'cadetblue', 'coral', 'blueviolet', 'beige', 'green'] \n",
+      "color_list = ['azure', 'brown', 'cadetblue', 'coral', 'blueviolet', 'beige', 'green']\n",
       "\n",
-      "cre_lines = cells_below_y100_df['cre_line'].unique() # find unique labels from a particular column\n",
-      "cmap_cre_line = cm.make_color_map(cre_lines,color_list) # make color map for these labels\n",
-      "cmap_ei = {'excitatory':'red','inhibitory':'blue'} # example of a manually created colormap\n",
+      "cre_lines = cells_below_y100_df['cre_line'].unique()\n",
+      "cmap_cre_line = cm.make_color_map(cre_lines,color_list)\n",
+      "cmap_ei = {'excitatory':'red','inhibitory':'blue'}\n",
       "cmap_cre_line"
      ],
      "language": "python",
@@ -234,7 +244,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 17,
+       "prompt_number": 8,
        "text": [
         "{'Htr3a': 'cadetblue',\n",
         " 'Ntsr1': 'blueviolet',\n",
@@ -246,7 +256,7 @@
        ]
       }
      ],
-     "prompt_number": 17
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
@@ -254,8 +264,8 @@
      "input": [
       "#plot selected cells\n",
       "\n",
-      "fig.plot_morph(cells_below_y100_df[::100], morphologies, cmap_cre_line,'cre_line')    #Pass query into plotting routine along with raw morphologies\n",
-      "fig.plot_somas(cells_below_y100_df[::100], soma_sizes, cmap_cre_line,'cre_line')    #Pass query into plotting routine along with raw morphologies\n",
+      "fig.plot_morph(cells_below_y100_df[::200], morphologies, cmap_ei,'ei')    #Pass query into plotting routine along with raw morphologies\n",
+      "fig.plot_somas(cells_below_y100_df[::200], soma_sizes, cmap_ei,'ei')    #Pass query into plotting routine along with raw morphologies\n",
       "\n",
       "\n",
       "\n"
@@ -279,7 +289,7 @@
        ]
       }
      ],
-     "prompt_number": 18
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
@@ -298,7 +308,7 @@
        ]
       }
      ],
-     "prompt_number": 19
+     "prompt_number": 10
     },
     {
      "cell_type": "code",
@@ -310,6 +320,26 @@
      "metadata": {},
      "outputs": [],
      "prompt_number": 13
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "cells_below_y100_df['cre_line'].unique()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 4,
+       "text": [
+        "array(['Rbp4', 'Pvalb', 'Htr3a', 'Sst', 'Ntsr1', 'Scnn1a', 'Rorb'], dtype=object)"
+       ]
+      }
+     ],
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
